gcc/testsuite/rust/rustc/ui/parser/keyword-use-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py use'

fn main() {
    let use = "foo"; // { dg-error "" "" { target *-*-* } }
}

